Add initial controllers
